[package]
edition = "2021"
name = "iconv-sys"
version = "0.0.1"
rust-version = "1.59"
authors = ["warlock <internalmike@gmail.com>"]
description = "Raw FFI binding to iconv functions."
readme = "README.md"
documentation = "https://docs.rs/iconv-sys/"
keywords = ["iconv", "ncurses", "screen"]
categories = ["external-ffi-bindings", "os::unix-apis", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/iconv-sys"

[dependencies]
libc = { version = "0.2.124", default-features = false }

[build-dependencies]
cc = "1.0.73"
